@startuml

title __UTILS's Class Diagram__\n

  namespace usantatecla.utils {
    class usantatecla.utils.ClosedInterval {
        - max : int
        - min : int
        + ClosedInterval()
        + includes()
    }
  }
  

  namespace usantatecla.utils {
    abstract class usantatecla.utils.Command {
        # title : String
        # Command()
        {abstract} # execute()
        {abstract} # isActive()
        ~ getTitle()
    }
  }
  

  namespace usantatecla.utils {
    class usantatecla.utils.Console {
        - bufferedReader : BufferedReader
        + readChar()
        + readInt()
        + readString()
        + write()
        + write()
        + writeln()
        + writeln()
        + writeln()
        - writeError()
    }
  }
  

  namespace usantatecla.utils {
    abstract class usantatecla.utils.Menu {
        {static} - OPTION : String
        - commandList : List<Command>
        + Menu()
        + execute()
        # addCommand()
    }
  }
  

  namespace usantatecla.utils {
    abstract class usantatecla.utils.WithConsoleView {
        # WithConsoleView()
    }
  }
  

  namespace usantatecla.utils {
    class usantatecla.utils.YesNoDialog {
        {static} - AFIRMATIVE : char
        {static} - MESSAGE : String
        {static} - NEGATIVE : char
        {static} - QUESTION : String
        + read()
        {static} - isAfirmative()
        {static} - isNegative()
    }
  }
  

  usantatecla.utils.Command -up-|> usantatecla.utils.WithConsoleView
  usantatecla.utils.Menu -up-|> usantatecla.utils.WithConsoleView
  usantatecla.utils.WithConsoleView o-- usantatecla.utils.Console : console
  usantatecla.utils.YesNoDialog -up-|> usantatecla.utils.WithConsoleView


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
